# finance

./: .gitignore  AGENTS.md  README.md  design.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: backtests.py  forecasts.py  markets.py  stocks.py  system.py
backend/app/core/: config.py
backend/app/schemas/: models.py
backend/app/services/backtest/: __init__.py  engine.py  jobs.py  strategies.py
backend/app/services/forecast/: __init__.py  feature_engineering.py  models.py  service.py
backend/app/services/market_data/: service.py  symbol.py
backend/app/services/market_data/providers/: base.py  fixture.py  futu.py
backend/app/services/news/: __init__.py  service.py
backend/app/services/news/providers/: __init__.py  alpha_vantage.py  keyword.py  rss.py
backend/app/services/opportunity/: __init__.py  service.py
backend/app/storage/: repositories.py
backend/app/tasks/: scheduler.py
backend/finance_quant_lab_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_backtest_engine.py  test_forecast_features.py  test_market_data_behavior.py  test_news_aggregation.py  test_opportunity_service.py  test_provider_diagnostics.py  test_symbol_mapping.py
docs/: architecture.md  deployment.md  local-dev.md  ui-spec.md
docs/context/: 2026-04-13-session-019d8618-finance-handoff.md  finance-handoff.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
tools/: publish-finance.ps1
(+66 files in other folders)
