[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-quant-lab-backend"
version = "0.1.0"
description = "FastAPI backend for Finance Quant Lab."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "duckdb>=1.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "numpy>=2.1.0",
  "pandas>=2.2.3",
  "pyarrow>=18.0.0",
  "pydantic-settings>=2.6.1",
  "scikit-learn>=1.5.2",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.1",
]
ml = [
  "xgboost>=2.1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
